# timetable/openapi.py
@@ -3,8 +3,8 @@ from apispec.ext.marshmallow import MarshmallowPlugin
 from apispec_webframeworks.flask import FlaskPlugin
 
 from timetable import app
-from timetable.views import event, note
-from timetable.schemas.event import CategorySchema, EventSchema
+from timetable.views import event as event_view, note as note_view
+from timetable.schemas import event as event_schemas
 from timetable.schemas.note import NoteFormSchema, NoteSchema
 
 spec = APISpec(
@@ -16,13 +16,14 @@ spec = APISpec(
     plugins=[FlaskPlugin(), MarshmallowPlugin()]
 )
 
-spec.components.schema('Category', schema=CategorySchema)
-spec.components.schema('Event', schema=EventSchema)
+spec.components.schema('Category', schema=event_schemas.CategorySchema)
+spec.components.schema('Event', schema=event_schemas.EventSchema)
 spec.components.schema('NoteForm', schema=NoteFormSchema)
 spec.components.schema('Note', schema=NoteSchema)
 
 with app.test_request_context():
-    spec.path(view=event.get_event_categories)
-    spec.path(view=event.save_event)
-    spec.path(view=note.get_note_content)
-    spec.path(view=note.save_note)
+    spec.path(view=event_view.get_event_categories)
+    spec.path(view=event_view.save_event)
+    spec.path(view=event_view.get_event_list)
+    spec.path(view=note_view.get_note_content)
+    spec.path(view=note_view.save_note)
